--- a/kalmar.html
+++ b/kalmar.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalmar - Småland</title>
+    <title>Blekinge - Ronneby</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Småland</a></li>
-            <li><a href="kalmar.html" id="thisPage">Kalmar</a></li>
-            <li><a href="vaxjo.html">Växjö</a></li>
+            <li><a href="index.html">Ronneby</a></li>
+            <li><a href="Blekinge.html" id="thisPage">Blekinge</a></li>
+            <li><a href="Sverige.html">Sverige</a></li>
         </ul>
     </nav>
     <header>
-        <h1>Kalmar</h1>
+        <h1>Blekinge</h1>
     </header>
     <main>
         <p>Kalmar är residensstad i Kalmar län. Intill universitetet ligger Kalmar slott.</p>
