--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <nav>
         <ul>
             <li><a href="index.html" id="thisPage">Ronneby</a></li>
-            <li><a href="Blekinge.html">Blekinge</a></li>
-            <li><a href="Sverige.html">Sverige</a></li>
+            <li><a href="Kalmar.html">Blekinge</a></li>
+            <li><a href="Växjö.html">Sverige</a></li>
         </ul>
     </nav>
     <header>
