--- a/kalmar.html
+++ b/kalmar.html
@@ -11,8 +11,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Ronneby</a></li>
-            <li><a href="Blekinge.html" id="thisPage">Blekinge</a></li>
-            <li><a href="Sverige.html">Sverige</a></li>
+            <li><a href="kalmar.html" id="thisPage">Blekinge</a></li>
+            <li><a href="sverige.html">Sverige</a></li>
         </ul>
     </nav>
     <header>
