--- a/kalmar.html
+++ b/kalmar.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html">Ronneby</a></li>
             <li><a href="kalmar.html" id="thisPage">Blekinge</a></li>
-            <li><a href="sverige.html">Sverige</a></li>
+            <li><a href="växjö.html">Sverige</a></li>
         </ul>
     </nav>
     <header>
