--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="index.html" id="thisPage">Ronneby</a></li>
             <li><a href="kalmar.html">Blekinge</a></li>
-            <li><a href="växjö.html">Sverige</a></li>
+            <li><a href="vaxjö.html">Sverige</a></li>
         </ul>
     </nav>
     <header>
