--- a/vaxjo.html
+++ b/vaxjo.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Småland</a></li>
-            <li><a href="kalmar.html">Kalmar</a></li>
-            <li><a href="vaxjo.html" id="thisPage">Växjö</a></li>
+            <li><a href="index.html">Ronneby</a></li>
+            <li><a href="kalmar.html">Blekinge</a></li>
+            <li><a href="vaxjo.html" id="thisPage">Sverige</a></li>
         </ul>
     </nav>
     <header>
