--- a/vaxjo.html
+++ b/vaxjo.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
     <header>
-        <h1>Växjö</h1>
+        <h1>Sverige</h1>
     </header>
     <main>
         <p>Växjö är en stad i Kronobergs län i den del av Småland. På universitetets campus finns Teleborgs slott.</p>
