--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
         <h1>Ronneby</h1>
     </header>
     <main>
-        <img src="img/forestroad.jpg" alt="Skogsväg" class="floatRight">
-        <p>I sydöstra delen av Sverige ligger landskapet Småland. Under Vikingatiden och medeltiden fanns här flera små land (folkland), som sedan slagits samman till landskapet Småland.</p>
-        <p>Landskapets natur prräglas dock av att vara rikt både på skog och sjöar.</p>
+        <p>Ronneby är en liten stad i södra sverige i blekinge.</p>
+        <p></p>
         <h2>Natur</h2>
-        <p>I Småland finns <a href="http://lnu.se" target="_blank">Linnéuniversitetet</a>, grundat 2010, då Växjö universitet och Högskolan i Kalmar slogs samman. Universitetet har c:a 33.000 studenter. Utbildning sker både på distans och campus i Växjö och Kalmar samt lärcentra i en del andra orter.</p>
-    </main>
-    <footer>
-        Webbplats för test
     </footer>
 </body>
 </html>
