--- a/kalmar.html
+++ b/kalmar.html
@@ -19,8 +19,7 @@
         <h1>Blekinge</h1>
     </header>
     <main>
-        <p>Kalmar är residensstad i Kalmar län. Intill universitetet ligger Kalmar slott.</p>
-        <img src="img/kalmarcastle.jpg" alt="Kalmar slott">
+        <p>Blekinge är ett landskap i södra sverige</p>
     </main>
     <footer>
         Webbplats för test
